--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/IgorBoichuk/ice-cream.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Igor Boichuk <ihor.boichuk@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IgorBoichuk/ice-cream/issues"
